--- a/Party.DB/Party.DB.csproj
+++ b/Party.DB/Party.DB.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net472</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.12" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.12">
         <PrivateAssets>all</PrivateAssets>
